Fix phone alignment on the user account page.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -810,7 +810,8 @@ div.panel-pane div.node.boxed {
   }
 }
 
-.page-user-view {
+.page-user-view,
+.page-user {
   .field-name-field-phone-type,
   .field-name-field-deferred-fee-label,
   .pane-user-field-identification {
